<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="happyBirthday">Happy Birthday!</string>
    <string name="hello_world">Hello World!</string>
    <string name="orange_text_view">This is an orange TextView</string>
    <string name="green_text_view">This is a green TextView</string>
    <string name="blue_text_view">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify Me:)</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept_terms"><![CDATA[I accept T&C]]></string>
    <string name="submit">Submit</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="see_scroll_and_rel">See ScrollView and Relative Layout</string>
    <string name="see_spinner">See Spinner</string>
    <string name="scroll_view_definition">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="spinner_example">Spinner example</string>
    <string name="cupcake">Cupcake</string>
    <string name="click_smallest_button">Click the smallest</string>
    <string name="click">Click</string>
    <string name="button">button</string>
    <string name="go_to_next_activity">Go to next activity.</string>
    <string name="call">Call</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_number">Add a number</string>
    <string name="send">SEND</string>
    <string name="get_sum">Get sum</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="dialog">Dialog</string>
    <string name="notice">Notice</string>
    <string name="alert_message">What now?</string>
    <string name="launch_app">Launch App</string>
    <string name="remind_me">Remind me</string>
    <string name="cancel">Cancel</string>

</resources>
