<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:padding="20dp"

            android:text="@string/orange_text_view"
            android:textColor="@color/white"
            android:background="@color/orange"

            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@color/green"

            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/green_text_view"

            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"

            android:background="@color/blue"
            android:padding="20dp"
            android:text="@string/blue_text_view"

            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_see_scroll_and_rel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_S"
            android:text="@string/see_scroll_and_rel"
            android:padding="@dimen/space_XS"
            android:onClick="btnSeeScrollAndRel"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@color/blue"
            />

        <Button
            android:id="@+id/button_see_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_S"
            android:padding="@dimen/space_S"
            android:text="@string/see_spinner"
            android:onClick="btnSeeSpinner"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:inputType="text"
        android:hint="@string/this_is_an_edittext"
        android:padding="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"></View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:hint="@string/this_is_a_new_edittext"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/green">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_me"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft= "100dp"
            android:text="@string/auto_backup"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:orientation="vertical">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>