<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/space_S"
    tools:context=".week_3.LoginActivity">

    <TextView
        android:id="@+id/textview_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="@dimen/space_S"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_space_L"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="@dimen/space_S"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_margin="@dimen/space_S"
        android:inputType="phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_terms_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_S"/>

        <TextView
            android:id="@+id/textview_terms_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms"
            android:layout_margin="@dimen/space_S"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_S"
        android:onClick="btnSubmitOnClick"
        android:text="@string/submit"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>